--- a/problems/problem3/css/style.css
+++ b/problems/problem3/css/style.css
@@ -2,14 +2,44 @@
 .container {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    /* justify-content: flex-end; */
     gap: 2rem;
+    background: radial-gradient(circle, rgba(54,236,237,1) 0%, rgba(216,86,255,1) 100%);
+    padding: 3rem;
 }
 
 .box {
-    background-color: chocolate;
+    background-color: lightblue;
     min-width: 300px;
-    min-height: 300px;
-    
+    min-height: 200px;
+    border-radius: 1rem;
+    text-align: center;
+    border: 1px solid black;
+    box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
+}
 
+.box:nth-child(1) {
+    height: 300px;
+}
+
+.box:nth-child(3) {
+    background-color: blueviolet;
+    height: 300px;
+    border-radius: 50%;
+    
+}
+
+.box:nth-child(4) {
+    background-color: darkmagenta;
+    height: 400px;
+}
+
+.box:nth-child(5) {
+    border-radius: 60%;
+}
+
+.box:nth-child(6) {
+    background-color: limegreen;
+    height: 500px;
+    border-radius: 40%;
 }
